implementing editing function

--- a/webservice/views/index.jade
+++ b/webservice/views/index.jade
@@ -46,6 +46,10 @@ block content
         #clientInfo
             h2 Information from Client
             p
+                strong Id:
+                |  <span id='clientInfoId'></span>
+                br
+                br
                 strong Client:
                 |  <span id='clientInfoName'></span>
                 br
