--- a/webservice/views/index.jade
+++ b/webservice/views/index.jade
@@ -21,10 +21,10 @@ block content
                 input#inputClientPhone(type='text', placeholder='Phone')
                 h3 health plan data
                 select#inputClientHealthPlan
-                        option  Unimed
-                        option  Bradesco
-                        option  Smile
-                        option  Particular
+                        option(value='unimed') Unimed
+                        option(value='bradesco') Bradesco
+                        option(value='smile') Smile
+                        option(value='particular') Particular
                 &nbsp;
                 input#inputClientHealthPlanNumber(type='text', placeholder='Health Plan Number')
                 &nbsp;
