new changes in info clients

--- a/webservice/views/index.jade
+++ b/webservice/views/index.jade
@@ -60,11 +60,11 @@ block content
             h2 Information from Client
             p
                 strong Health Plan:
-                  <span id='clientInfoId'></span>
+                  <span id=''></span>
                 br
                 br
                 strong Health Plan Number:
-                    <span id='clientInfoId'></span>
+                    <span id='healthPlanNumber'></span>
                 br
                 br
                 strong Client:
