update index webservice

--- a/webservice/views/index.jade
+++ b/webservice/views/index.jade
@@ -15,3 +15,6 @@ block content
                   ul
                      li
                         a(href='/scheduling') Scheduling
+                     br
+                     li
+                        a(href='/times') Available Times
